--- a/css/jona.css
+++ b/css/jona.css
@@ -36,11 +36,11 @@
     padding: 0;
     overflow: hidden;
     min-width: 0;
-    transition: all 0.3s ease; /* Agregamos transición para suavizar los efectos */
+    transition: all 0.3s ease; 
 }
 .productos-destacados-ofertas .productos .column:hover {
-    transform: translateY(-5px); /* Efecto de elevación */
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
+    transform: translateY(-5px); 
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
 }
 
 .productos-destacados-ofertas .productos .column img {
@@ -48,10 +48,10 @@
     height: 150px;
     object-fit: cover;
     margin: 0;
-    transition: transform 0.3s ease; /* Transición para la imagen */
+    transition: transform 0.3s ease; 
 }
 .productos-destacados-ofertas .productos .column:hover img {
-    transform: scale(1.05); /* Ligero zoom en la imagen */
+    transform: scale(1.05); 
 }
 
 .productos-destacados-ofertas .productos .column h3 {
@@ -106,7 +106,6 @@
     background-color: var(--color-five);
 }
 
-/* Estilos para la tarjeta "Ver Todos los Productos" */
 .productos-destacados-ofertas .productos .ver-todos-column {
     background-color: var(--color-one);
     color: white;
@@ -119,7 +118,7 @@
 }
 
 .productos-destacados-ofertas .productos .ver-todos-column:hover {
-    background-color: var(--color-two); /* Cambio de color al pasar el mouse */
+    background-color: var(--color-two); 
     transform: translateY(-5px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
@@ -148,7 +147,7 @@
 
 .productos-destacados-ofertas .productos .ver-todos-column .boton-ver-todos:hover {
     background-color: var(--color-six);
-    transform: scale(1.05); /* Ligero aumento de tamaño */
+    transform: scale(1.05); 
 }
 
 /* Media query para pantallas más pequeñas */
