--- a/css/nico.css
+++ b/css/nico.css
@@ -21,3 +21,35 @@
 @media (min-width: 120.0rem) { 
     
 }
+.overlay {
+    text-align: center;
+    background-image: url('../img/principal.jpg');
+    background-size: cover;
+    background-position: center;
+    color: var(--color-six);
+    padding: 10em;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay h1 {
+    background-color: var(--color-four); 
+    border-radius: 10px; 
+    padding: 10px; 
+    font-size: 2.5em; 
+    display: inline-block; 
+    text-shadow: 2px 2px 4px var(--color-one);
+    font-family: 'Great Vibes', cursive;
+}
+
+.overlay h3 {
+    margin-top: 40px;
+    text-shadow: 2px 2px 4px var(--color-one);
+    font-family: "Dosis", sans-serif;
+    font-size: 4rem;
+    color: var(--color-six);
+}
