--- a/css/jona_productos.css
+++ b/css/jona_productos.css
@@ -10,7 +10,7 @@
     --color-six: #e8bcb9;
 }
 .full-width {
-    width: 90%;
+    width: 100%;
     margin: 0 auto; 
     padding-top: 20px;
     display: flex; 
@@ -41,7 +41,7 @@
 
 .productos-destacados-ofertas .productos .row {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 3fr);
     padding: 20px;
     gap: 20px;
 }
@@ -52,7 +52,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: 1px solid #e9e9e9;
     padding: 0;
-    margin: 0px;
+    margin: 0;
     overflow: hidden;
     min-width: 0;
     transition: all 0.3s ease;
@@ -60,6 +60,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 .productos-destacados-ofertas .productos .column:hover {
@@ -209,13 +210,21 @@
 @media (max-width: 768px) {
     .productos-destacados-ofertas .productos .row,
     .promociones-destacados-ofertas .promociones .row {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 2fr);
     }
 }
 
 @media (max-width: 480px) {
-    .productos-destacados-ofertas .productos .row,
-    .promociones-destacados-ofertas .promociones .row {
+    .productos-destacados-ofertas .productos .row {
         grid-template-columns: 1fr;
+        padding: 0;
+        margin: 0; /* Asegúrate de que el margen esté en 0 para evitar espacio extra */
+    }
+
+    .productos-destacados-ofertas .productos .column {
+        width: 100%; /* Asegúrate de que cada tarjeta ocupe todo el ancho disponible */
+        box-sizing: border-box; /* Incluye el padding y el borde en el ancho total */
+        margin: 0; /* Elimina márgenes laterales para usar el ancho completo */
     }
 }
+
