html nosotros script

--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,4 +1,4 @@
-import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root{
     --color-one: #1d1a39;
@@ -113,3 +113,19 @@ import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserr
         transform: translateY(20px);
     }
 }
+
+/* Larger than mobile screen */
+@media (min-width: 40.0rem) { 
+
+}
+
+/* Larger than tablet screen */
+@media (min-width: 80.0rem) { 
+
+}
+
+/* Larger than desktop screen */
+@media (min-width: 120.0rem) { 
+   
+}
+  
