--- a/css/victorio.css
+++ b/css/victorio.css
@@ -19,7 +19,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: var(--color-four); 
+    background-color: var(--color-four);
     z-index: 999;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -27,13 +27,14 @@ header {
 .logo img {
     width: 50px;
     height: auto;
+    margin-right: 15px;
 }
 
 .navbar {
     display: flex;
-    justify-content: flex-start; /* Asegura que el contenido esté alineado a la izquierda */
+    justify-content: flex-start; 
     align-items: center;
-    padding: 10px 20px; 
+    padding: 10px 20px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -42,7 +43,7 @@ header {
     margin: 0;
     padding: 0;
     list-style: none;
-    flex-grow: 1; /* Esto permitirá que el menú ocupe todo el espacio posible */
+    flex-grow: 1; 
 }
 
 .menu li {
@@ -103,7 +104,7 @@ header {
 
 .nav-item i {
     margin-right: 8px;
-    color: var(--color-six);  /* Cambiar color del icono */
+    color: var(--color-six);  
 }
 
 .nav-item a {
@@ -160,7 +161,7 @@ header {
 
 .footer-bottom p {
     margin: 0;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .footer-section h3,
@@ -172,7 +173,22 @@ header {
 .footer-section p:hover {
     color: var(--color-five);
 }
+.footer-section a {
+    color: var(--color-six);
+    text-decoration: none;
+    margin: 0 4px;
+    display: inline-block;
+    font-size: 24px;
+    transition: color 0.3s ease;
+}
 
+.footer-section a:hover {
+    color: var(--color-five);
+}
+
+.footer-section a i {
+    margin-right: 8px;
+}
 /* Responsive Styles */
 @media (max-width: 768px) {
     .menu {
@@ -206,3 +222,4 @@ header {
         margin-top: 10px;
     }
 }
+
