--- a/css/jona_productos.css
+++ b/css/jona_productos.css
@@ -8,6 +8,7 @@
     --color-four: #ae445a;
     --color-five: #f39f5a;
     --color-six: #e8bcb9;
+    --color-seven: rgba(252, 232, 197, 0.824);
 }
 
 .productos-destacados-ofertas .productos {
@@ -16,6 +17,7 @@
     flex-wrap: wrap; 
     gap: 20px;
     padding: 5%;
+    background-color: var(--color-six);
 }
 
 .productos-destacados-ofertas .productos h3 {
@@ -39,7 +41,7 @@
 }
 
 .productos-destacados-ofertas .productos .column {
-    background-color: #fff;
+    background-color: var(--color-seven);
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: 1px solid #e9e9e9;
@@ -53,6 +55,7 @@
     align-items: center;
     margin-bottom: 20px;
     box-sizing: border-box;
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
 }
 
 .productos-destacados-ofertas .productos .column:hover {
