--- a/css/nico_promos.css
+++ b/css/nico_promos.css
@@ -8,12 +8,14 @@
 }
 
 body, html {
+    color: black;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
 .contenedora {
+    background-color: var(--color-six);
     width: 100%;
 }
 
@@ -52,10 +54,9 @@ body, html {
 }
 
 .promociones-destacados-ofertas .promociones .column {
-    background-color: #fff;
+    background-color: var(--color-seven);
     text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border: 1px solid #e9e9e9;
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
     padding: 0;
     margin: 0;
     overflow: hidden;
