--- a/css/octa_contacto.css
+++ b/css/octa_contacto.css
@@ -7,17 +7,22 @@
     --color-four: #ae445a;
     --color-five: #f39f5a;
     --color-six: #e8bcb9;
+    --color-seven: rgba(252, 232, 197, 0.824);
+   
 }
 .contenedora {
+    
     overflow-x: hidden; /* Evitar el desbordamiento horizontal solo en este contenedor */
 }
 .contacto {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 5%;
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 0;
+    
 }
 
 .contact-info {
@@ -26,7 +31,8 @@
     padding: 1rem;
     flex: 1;
     max-width: 300px;
-    box-sizing: border-box;
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+
 }
 
 .contact-info h3 {
@@ -37,10 +43,9 @@
 .contact-form {
     flex: 2;
     padding: 1rem;
-    background-color: var(--color-six);
-    border: 1px solid var(--color-three);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
+    background-color: var(--color-seven);
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
+
     width: 100%;
 }
 
@@ -78,13 +83,31 @@
     cursor: pointer;
 }
 
+.ubicacion {
+
+    padding: 3%;
+}
+
+
+
+.boton-formulario {
+    font-family: "Montserrat", sans-serif;
+    font-size: 12px;
+    background-color: var(--color-four);
+}
+
+.boton-formulario:hover {
+    background-color: var(--color-five);
+}
+
+
+
 #mapa {
     width: 100%;
     height: 450px;
     margin-top: 0;
 }
 
-/* Responsive Design */
 
 /* Tablet and smaller */
 @media (max-width: 80rem) {
