--- a/boostrap/css/rodo.css
+++ b/boostrap/css/rodo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 
 :root{
     --color-one: #1d1a39;
@@ -9,105 +10,56 @@
     --color-six: #e8bcb9;
 }
 
-.prueba .column{
-    border: solid black;
-}
-
-.nosotros {  
-    display: flex;
-    padding: 2%;
-
-}
-
-
-.nosotros-texto {
-    font-family: "Montserrat", sans-serif;
-    margin: 1%;
-    
-
-}
-
-
-.carousel {
-    display: flex;
-    align-items: center;
-    margin: 1%;
-    position: relative;
-    overflow: hidden;
+.carousel-inner img {
     border-radius: 10px;
+    margin-left: 2%;
+    width: 100%; /* Ajusta el ancho al 100% del contenedor */
+    height: 400px; /* Establece una altura fija */
+    border-radius: 15px; /* Ajusta este valor para cambiar el radio del borde */
 
-    
-}
-
-.carousel-inner {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
 }
 
 .carousel-item {
-    min-width: 100%;
-    transition: opacity 1s ease-in-out;
+    overflow: hidden; /* Asegúrate de que el contenido no se desborde del contenedor */
+    border-radius: 15px; /* Ajusta este valor para cambiar el radio del borde */
 }
 
-.carousel-item img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 10px;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-}
-
-.carousel-controls button {
-    background: none;
-    border: none;
-    font-size: 3rem;
-    color: white;
-    cursor: pointer;
-    padding: 0 10px;
-    transition: color 0.3s;
-}
-
-.carousel-controls button:hover {
-    color: #cccccc;
-}
-
-.boton-conocemas {
+.btn {
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
-    background-color: var(--color-four);
+    background-color: var(--color-four);   
 }
 
-.boton-conocemas:hover {
-    background-color: var(--color-five);
+.meta{
+    margin-left: 1%;
 }
 
-.objetivo{
-    font-family: "Montserrat", sans-serif;
-    Display: flex;
-    gap: 5%;
-    padding: 2%;
-}
-
-.meta {
-    font-family: "Montserrat", sans-serif;
-    Display: flex;
-    gap: 10%;
-    padding: 2%;
-}
+.objetivo, .meta {
     
+    font-family: "Montserrat", sans-serif;    
+} 
+
 .linea-divisoria {
     width: 100%;
-    height: 4px; /* Puedes ajustar el grosor de la línea aquí */
+    height: 2px; 
     background-color: var(--color-four);
-    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); /* Ajusta el tamaño y la opacidad de la sombra */
-    
+    box-shadow: 0 2px 16px rgba(88, 0, 0, 0.9); 
 }
 
+.move {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center; /* Centra el texto */
+    font-family: "Rock Salt", cursive;
+    font-weight: 400;
+    font-style: normal;
+    position: relative;
+    animation: move 5s infinite;
+    text-shadow: 
+    -1px -1px 0 #ffffff,  
+     1px -1px 0 #ffffff,
+    -1px  1px 0 #ffffff,
+     1px  1px 0 #ffffff;
+}
